--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -19,6 +19,12 @@
                 "disableBodyPruning": true
               },
               "request": {
+                "auth": {
+                  "type": "bearer",
+                  "bearer": {
+                    "token": "{{token}}"
+                  }
+                },
                 "method": "GET",
                 "header": [],
                 "url": {
@@ -947,27 +953,27 @@
   ],
   "variable": [
     {
-      "id": "e3bfbb44-5a00-4b0d-8b93-42cbc2a4f477",
+      "id": "7711bfcc-b098-4bea-b05f-f2284c3b6b66",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "ea1b4721-01ff-4e58-ab21-873e8840f477",
+      "id": "31f428ba-a218-42b8-af16-1fb8f428dbd8",
       "key": "port",
       "value": "8010"
     },
     {
-      "id": "7bc2a118-7ab9-4da1-b7ad-5a89275f54a8",
+      "id": "4a5fc08a-88c5-4cfb-85fc-927a6edd203f",
       "key": "username",
       "value": "mwin@miu.edu"
     },
     {
-      "id": "700f3618-3806-4235-aa08-9abe4855f3ef",
+      "id": "c64772a3-87db-4625-aae6-278079adca16",
       "key": "password",
       "value": "P@ssword"
     },
     {
-      "id": "1231173a-4177-48c8-879e-c4cb9d92ed4f",
+      "id": "a606f88d-8c1d-433c-8682-369fefe3bb36",
       "key": "token",
       "value": ""
     }
