--- a/pom.xml
+++ b/pom.xml
@@ -109,14 +109,14 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
 <!--                <configuration>-->
 <!--                    <source>${java.version}</source>-->
 <!--                    <target>${java.version}</target>-->
 <!--                </configuration>-->
-            </plugin>
+<!--            </plugin>-->
         </plugins>
         <finalName>ea_final_project</finalName>
     </build>
