--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
     name: EA Final Project (Dev)
   datasource:
     url: jdbc:mysql://localhost:3306/cs544
-    username: ray
-    password:
+    username: root
+    password: P@ssw0rd
   jpa:
     show-sql: true
