--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8010
+  port: 8011
 countrystatecity:
   forceUpdate: false
 spring:
   application:
     name: EA Final Project (Dev)
   datasource:
-    url: jdbc:mysql://localhost:3306/cs544
-    username: ray
+    url: jdbc:mysql://localhost:3306/ea544
+    username: root
     password:
   jpa:
     show-sql: true
