--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ countrystatecity:
 
 spring:
   profiles:
-    active: prod
+    active: dev
   application:
     name: ea-course-registration
   datasource:
