--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>EAProject</name>
     <description>MIU EA Project</description>
     <properties>
-        <java.version>16</java.version>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -96,10 +96,12 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-data-rest</artifactId>
+            <version>1.6.1</version>
         </dependency>
     </dependencies>
 
