--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
-server:
-  port: 8011
-countrystatecity:
-  forceUpdate: false
+#server:
+#  port: 8011
+#countrystatecity:
+#  forceUpdate: false
 spring:
   application:
     name: EA Final Project
