--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
-server:
-  port: ${PORT:8011}
-
-  error:
-    include-message: always
-    include-binding-errors: on_param
-    include-stacktrace: never
-    include-exception: false
-
-countrystatecity:
-  forceUpdate: false
+#server:
+#  port: ${PORT:8011}
+#
+#  error:
+#    include-message: always
+#    include-binding-errors: on_param
+#    include-stacktrace: never
+#    include-exception: false
+#
+#countrystatecity:
+#  forceUpdate: false
 
 spring:
   profiles:
