--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${PORT:8011}
+  port: 8011
 
   error:
     include-message: always
@@ -17,7 +17,7 @@ spring:
     name: ea-course-registration
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: mysql://be4721dffdca39:b31cad21@us-cdbr-east-05.cleardb.net/heroku_1ca686ea640d958?reconnect=true
+    url: jdbc:mysql://be4721dffdca39:b31cad21@us-cdbr-east-05.cleardb.net/heroku_1ca686ea640d958
     username: bdec61cbf0420f
     password: d13dd415
     hikari:
