--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   application:
     name: ea-course-registration
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
+    driverClassName: org.postgresql.Driver
     url: jdbc:mysql://us-cdbr-east-05.cleardb.net/heroku_1ca686ea640d958
     username: bdec61cbf0420f
     password: d13dd415
